# veribound-mvp-with-garth-demo

./: .gitignore  README.md  dune  dune-project
archive/: src.dune.broken.backup  ultimate_veribound_showcase.sh
data/: demo1_input.json  manual_test.json  manual_test_sealed.json  test_corrected_md5.json  test_corrected_md5_fixed.json  test_sealed_temp.json  test_sealed_valid.json  test_sealed_valid_TAMPERED.json  test_sealed_valid_fixed.json  test_verifier_compatible.json
docs/: README_for_Garth.md  README_working_system.md
domains/: aml_cash.yaml  aqi.yaml  basel_corporate.yaml  basel_iii_capital_adequacy.yaml  blood_pressure.yaml  ccar_capital_ratios.yaml  ccar_loss_rates.yaml  ccar_stress.yaml  ccar_stress_testing.yaml  clinical_trial_safety.yaml  diabetes.yaml  frtb_market_risk.yaml  liquidity_risk_lcr_nsfr.yaml  medical.yaml  medical_device_performance.yaml  nuclear_emergency_action_levels.yaml  nuclear_radiation_limits.yaml  nuclear_reactor_protection.yaml  pharma_dose_safety.yaml
scripts/: quick_audience_response.sh  ultimate_demo.sh  ultimate_veribound_showcase.sh
src/: dune  veribound_hash_seal.mli  verifier.mli
test/: Demonstration_1.ml  Demonstration_Financial_Regimes.ml  debug_boundaries.ml  dune  mvp_demo.ml  test_arithmetic_scaling_torture.ml  test_comprehensive_demo.ml  test_dual_engine.ml  test_dynamic_audience.ml  test_neurotoxin_demo.ml  test_pathological_cases.ml  test_regulatory_compliance_generated_dune_gen  test_safety_critical_generated_dune_gen  test_ultimate_pathological_generated.ml  test_ultimate_pathological_generated_dune_gen  (+2 more)
(+4 files in other folders)
