(lang dune 3.0)

(package
 (name veribound-core)
 (license Apache-2.0)
 (authors "VeriBound Core Contributors")
 (maintainers "dhwcmoore@example.com")
 (source (github dhwcmoore/veribound-core))
 (homepage "https://github.com/dhwcmoore/veribound-core")
 (documentation "https://github.com/dhwcmoore/veribound-core")
 (depends ocaml dune yojson unix digestif str coq))
